# NYCMetroETA

./: .gitignore  ARDUINO_SETUP.md  CLAUDE.md  DEPLOY.md  NEXT_STEPS.md  README.md
.github/workflows/: deploy.yml  test.yml
arduino_metrodisplay_module/: README.md  config.json
arduino_metrodisplay_module/metro_display/: config.example.h  config.h  display.h  esp_panel_board_supported_conf.h  gt911.h  metro_display.ino  ui.h
metro_api/: Dockerfile  README.md  app.py  pyproject.toml
metro_api/scripts/: explore_feed.py  test.py
metro_api/tests/: conftest.py  test_api.py  test_helpers.py
